# kalman_filter

./: CMakeLists.txt  README.md  package.xml
include/kalman_filter/: kalman_filter.hpp  run_lin_cov.hpp  run_monte_carlo.hpp
include/kalman_filter/controllers/: controller_base.hpp  dubins_airplane_controller.hpp  finite_time_lqr.hpp  one_dim_integrator_controller.hpp  open_loop_controller.hpp
include/kalman_filter/dynamics/: basic_model.hpp  dubins_airplane_model.hpp  dynamics_base.hpp  one_dim_integrator.hpp
include/kalman_filter/helpers/: dimension_struct.hpp  integrator_step.hpp  measurement_update.hpp  plot_statistics.hpp  plot_statistics_tools.hpp  propagate_augmented_covariance.hpp  propagate_error_covariance.hpp  tools.hpp  versions.hpp
include/kalman_filter/mappings/: dubins_airplane_mapping.hpp  linear_mapping.hpp  mappings_base.hpp  simple_mapping.hpp
include/kalman_filter/math/: covariance_model_fitting.hpp  helpers.hpp  inf_time_lqr.hpp  performance_evaluation.hpp  quaternion.hpp  steady_state_covariance.hpp
include/kalman_filter/noise/: multi_noise.hpp  noise_base.hpp  noise_wrapper.hpp  normal_distribution.hpp
include/kalman_filter/sensors/inertial_measurements/: dubins_airplane_imu.hpp  inertial_measurement_base.hpp  null_inertial_measurement.hpp  one_dim_integrator_accelerometer.hpp  open_loop_imu.hpp
include/kalman_filter/sensors/measurements/: absolute_pressure.hpp  differential_pressure.hpp  feature_bearing.hpp  feature_range.hpp  gps.hpp  ground_velocity.hpp  heading.hpp  measurement_base.hpp  one_dim_fix.hpp
include/kalman_filter/sensors/measurements/controllers/: all_sensors_controller.hpp  dubins_airplane_measurement_controller.hpp  gps_heading_altitude_controller.hpp  measurement_controller_base.hpp  no_sensors_controller.hpp  one_dim_integrator_measurement_controller.hpp
src/: finite_time_lqr_evaluation.cpp  gauss_markov_fit_demo.cpp  rocket_sled_demo.cpp
test/controllers/: dubins_airplane_controller_test.cpp
test/dynamics/: dubins_airplane_model_test.cpp
test/mappings/: dubins_airplane_mapping_test.cpp
test/noise/: normal_distribution_test.cpp
test/sensors/inertial_measurements/: dubins_airplane_imu_test.cpp
test/sensors/measurements/: differential_pressure_test.cpp  feature_bearing_test.cpp  feature_range_test.cpp
