<?xml version="1.0"?>
<package format="3">
  <name>kalman_filter</name>
  <version>0.0.0</version>
  <description>The kalman_filter package</description>
  <maintainer email="james@todo.todo">james</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>matplotlibcpp</depend>
  <depend>OpenMP</depend>
  <depend>TBB</depend>
  <depend>Boost</depend>

  <buildtool_depend>eigen3_cmake_module</buildtool_depend>
  <build_depend>eigen</build_depend>
  <buildtool_export_depend>eigen3_cmake_module</buildtool_export_depend>
  <build_export_depend>eigen</build_export_depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
